# AoE2-Civbuilder

./: .gitignore  .gitmodules  README.md  ai.json  ai_docs.txt  copyVoices.sh  createModFolder.sh  database.json  development.js  index.html  logs.txt  mod_civTechTree.js  mod_strings.js  package.json  random_icon.js  random_json.js  random_name.js  random_techtree.js  server.js  zipModFolder.sh
dpitk08652184/dpitk08652184-data/: info.json
dpitk08652184/dpitk08652184-ui/: info.json
drafts/: 364532670296516.json  README.md  cleanup.sh
michigaigo/: michigaigo_chat.json  michigaigo_users.json
misc/: aoe2techtree_data.json  apply_tech_costs.js  empty.json  tech_costs.json  trim_database.js
modding/: .depend  CMakeLists.txt  civbuilder.cpp  civbuilder.h  configure_civilizations.cpp  configure_civilizations.h  create-data-mod.cpp  helpers.cpp  helpers.h
modding/pcrio/: .gitignore  CMakeLists.txt  COPYING  README.md  pcrdef.h  pcrio.c  pcrio.h
modding/pcrio/tests/: CMakeLists.txt  check_pcrio.c
modding/requested_mods/: README.md  cleanup.sh
modding/scripts/: build.sh
process_mod/: constants.js  copyLanguages.sh  copyVoices.sh  createCivilizationsJson.js  createModFolder.sh  createTechtreeJson.js  modAI.js  modStrings.js  test.json  zipModFolder.sh
process_mod/random/: random_icon.js  random_json.js  random_name.js  (+1 more)
public/: builder.js  civTechTrees.json  civbuilder.html  civbuilder_home.html  client.js  common.js  draft.html  draft.js  draft_links.pug  edit.html  edit.js  error.pug  home.html  join.html  join.js  styles.css  updating.html  view.html  view.js
(+4153 files in other folders)
