cmake_minimum_required(VERSION 2.8)

#enable_testing()
#Can't find. Don't need.
#set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")

project(pecoffresourcelib)

add_definitions(-Wall -Wsign-compare)

#add_executable(pecoffresourcelib main.c pcrio.c)
#add_executable(debug_info debug_info.c pcrio.c)

#Can't find. Don't need.
#add_subdirectory(tests)
